[package]
name = "arbitrage_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
futures-util = "0.3.31"
solana-account-decoder = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
zstd = "0.13.3"
