[package]
name = "arbitrage_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
borsh = "1.5.7"
dashmap = "6.1.0"
futures-util = "0.3.31"
sha2 = "0.10.9"
solana-account-decoder = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status-client-types = "3.0.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
zstd = "0.13.3"
